build(taffy): 兼容 Java 8 编译基准源码
将 JMH 基准中的 List.of 替换为 Collections.singletonList。

这样本地 vendored Taffy 的 shadowJar 在 Java 8 主源码约束下可以稳定构建。